--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,10 @@ jobs:
 
     services:
       postgres:
-        image: postgres:14
+        image: postgres:14-alpine
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
           POSTGRES_DB: simple_bank
         options: >-
             --health-cmd pg_isready
@@ -26,7 +26,7 @@ jobs:
             --health-timeout 5s
             --health-retries 5
         ports:
-          - 5432:5432
+          - 5435:5432
     steps:
 
       - name: Set up Go
